feat: 신청서 재작성시 Duplicate custom exception 발생